completed first section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,138 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Hello World!!</h1>
+    <!-- header -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="site logo" ></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact us</a>
+                  </li>
+              </div>
+            </div>
+          </nav>
+
+          <!-- carousel -->
+          <section class="container mt-5 rounded p-5 c-bg">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <div class="d-flex row align-items-center">
+                            <div class="col-lg-7 col-md-7 col-5">
+                                <h1>Cool Dude Headphone
+                                </h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.
+                                </p>
+                                <h1>$440</h1>
+                                <button class="btn btn-warning c-btn">
+                                    Buy Now
+                                </button>
+                            </div>
+                            <div class="col-lg-5 col-md-5 col-5">
+                                <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="">
+                            </div>
+                      </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <div class="d-flex row align-items-center">
+                          <div class="col-lg-7 col-md-7 col-5">
+                              <h1>X-Box for your living room
+                              </h1>
+                              <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                              </p>
+                              <h1>$440</h1>
+                              <button class="btn btn-warning c-btn">
+                                  Buy Now
+                          </button>
+                          </div>
+                          <div class="col-lg-5 col-md-5 col-5">
+                              <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="">
+                          </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="d-flex row align-items-center">
+                          <div class="col-lg-7 col-md-7 col-5">
+                              <h1>Mega LCD TV For Sports
+                              </h1>
+                              <p>This is the best tv in the world for people who just want to waste time in front of tv.
+                              </p>
+                              <h1>$440</h1>
+                              <button class="btn btn-warning c-btn">
+                                  Buy Now
+                          </button>
+                          </div>
+                          <div class="col-lg-5 col-md-5 col-5">
+                              <img src="./images/banner-images/tv.png" class="d-block w-100" alt="">
+                          </div>
+                    </div>
+                </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section> 
+    </header>
+
+
+
+
+    <!-- main -->
+    <main>
+        <section class="container-fluid mt-5 mb-5">
+            <div class="container">
+                <div class="row gx-5">
+                    <div class="col-lg-4 col-md-4 col-4 d-flex justify-content-center align-items-center row rounded c-watch c-watch1">
+                        <h1 class="col-lg-6 col-md-6 col-6">Watch</h1>
+                        <img width="100" class="col-lg-6 col-md-6 col-6" src="./images/categories/watch.png" alt="">
+                    </div>
+
+                    <div class="col-lg-4 col-md-4 col-4 d-flex justify-content-center align-items-center row rounded c-watch c-watch1">
+                        <h1 class="col-lg-6 col-md-6 col-6">Bag</h1>
+                        <img width="100" class="col-lg-6 col-md-6 col-6" src="./images/categories/bag.png" alt="">
+                    </div>
+
+                    <div class="col-lg-4 col-md-4 col-4 d-flex justify-content-center align-items-center row rounded c-watch c-watch1">
+                        <h1 class="col-lg-6 col-md-6 col-6">Shoes</h1>
+                        <img width="100" class="col-lg-6 col-md-6 col-6" src="./images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
+
+
+
+    <!-- boostrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
